fixed font size on mobile devices

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ h2 {
     }
 
     h2 {
-        font-size: 0.90em;
+        font-size: 0.95em;
     }
 }
 
